--- a/app/templates/video.html
+++ b/app/templates/video.html
@@ -3,6 +3,8 @@
 {% block title %}Lecture4All - {{ video_id }}{% endblock %}
 
 {% block content %}
+<style>
+</style>
 <div class="row p-lg-5">
     <div class="col-12 col-lg-9 p-0">
         <div class="video-container">
@@ -16,7 +18,20 @@
                         <button id="play-pause-btn"><img id="playIcon" src="{{ url_for('static', filename='images/play.svg') }}" alt="Play-Button" style="height: 16px;"></button>
                         <p class="m-0 ms-1 p-0" style="color: white; font-size: 0.75rem;" id="videozeit">0:00 / 0:00</p>
                     </div>
-                    <div class="d-flex justify-content-between" style="min-width: 150px;"> <!-- volume + leiste & fullscreen rechts -->
+                    <div class="d-flex justify-content-between" id="controlIcons"> <!-- volume + leiste & fullscreen rechts -->
+                        <button class="subtitle-btn d-flex align-items-center justify-content-center">
+                            <img id="subIcon" src="{{ url_for('static', filename='images/subtitles.svg') }}" alt="Subtitles-Button" style="height: 18px;">
+                            <span class="underline"></span>
+                            <div id="settings-menu" class="settings-menu" style="display: none;">
+                                <div class="settings-menu-item">
+                                    <label>Untertitel-Sprache</label>
+                                    <select id="subtitle-language">
+                                        <option value="en">Englisch</option>
+                                        <option value="de">Deutsch</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </button>
                         <div class="d-flex justify-content-center align-items-center" style="min-width: 4rem;">  <!-- volume + leiste -->
                             <button class="d-flex align-items-center" id="mute-unmute-btn"><img id="volumeIcon" src="{{ url_for('static', filename='images/volume-full.svg') }}" alt="Volume-Button" style="height: 16px;"></button>
                             <input type="range" id="volume-bar" min="0" max="1" step="0.01" value="1">
@@ -44,6 +59,8 @@
     <div class="row" id="searchResultsParent">
     </div>
 </div>
+<script>
+</script>
 <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 <script>
     // Hier funktionen die Flask brauchen
